finally fixed word wrap issue

--- a/public/css/index.scss
+++ b/public/css/index.scss
@@ -47,7 +47,8 @@ pre {
 	background-color: transparent;
 	border-color: transparent;
 	padding: 0;
-	word-break: normal;
+	word-break: keep-all;
+	white-space: pre-wrap;
 }
 
 a, a:hover {
